# cps310

./: README.md
armsim/: ash.py
armsim/mocktest/: CMakeLists.txt  Makefile  askapi.h  mocktest.c
armsim/starting/: CMakeLists.txt  ask.c  askapi.h
examples/asmdemos/: add.lst  add.s  array.lst  array.s  genlist.sh  genlistasm.sh  immediatevalues.lst  mov.lst  mov.s  output.lst  output.s
examples/bits/: genmask.c
tests/: diffscore.py  tracediff.py
tests/final/baseline/: clean.sh  make.sh  runall.sh
tests/final/baseline/src/: locals.c
tests/final/complete/: clean.sh  make.sh  runall.sh
tests/final/complete/_common/: hello.input  mersenne.input
tests/final/complete/base/: make.sh
tests/final/complete/base/etc/: compat.txt
tests/final/complete/fiq/etc/: compat.txt  linker.ld
tests/final/complete/fiq/inc/: sys.h
tests/final/complete/fiq/sys/: boot.s
tests/final/complete/irq/etc/: compat.txt  linker.ld
tests/final/complete/irq/inc/: sys.h
tests/final/complete/irq/sys/: boot.s
tests/final/complete/svc/: make.sh
tests/final/complete/svc/etc/: compat.txt  linker.ld
tests/final/complete/usr/: make.sh
tests/final/linux/: .gitignore  Makefile  hello  hello.c  hello_input.txt  mersenne  mersenne.c  mersenne_noinput  quicksort  quicksort.c  sieve  sieve.c
tests/loader/: test1.exe.hexdump  test2.exe.hexdump  test3.exe.hexdump
tests/obsolete/: README.md
tests/prototype/: clean.sh  make.sh  runall.sh
tests/prototype/src/: proto_test1.s  proto_test2.s  proto_test3.s  proto_test4.s  proto_test5.s  proto_test6.s  proto_test7.s
(+4 files in other folders)
